@@ -1,5 +1,9 @@
 2002-08-25  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/pthread/timer_routines.c (thread_func): Make the
+	compiler happy by adding a return statement which will never be
+	reached.
+
 	* tst-context.c (main): Cast to long before casting to pointer.
 
 	* Examples/ex17.c (main): Use correct format string.
